--- a/C/Crocs/Crocs_SS20/ClassicPillar_Sandals_Shop/ads/970x250/970x250.html
+++ b/C/Crocs/Crocs_SS20/ClassicPillar_Sandals_Shop/ads/970x250/970x250.html
@@ -52,7 +52,13 @@
       </div>
       <div id="headlineImage3" class="asset frame" data-image="headlineImage3"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="logoImage" class="asset frame" data-image="logoImage"></div>
+      <div id="logoImage" class="asset frame"
+        data-image="logoImage"
+        style="top: 180px;
+          left: 26px;
+          width: 129px;
+          height: 48px;">
+      </div>
       <div id="cta" class="asset"
         data-image="ctaImage"
         style="top: 188px;
@@ -77,13 +83,14 @@
       setTimeout(function() {
         ad.contentSetup({
           cam: {
-            backgroundImage1: 'assets/970x250_Crocs_ClassicPillar_CLASSIC_CLOG_H2T_PriyankaChopra_Background_01.png',
-            backgroundImage2: 'assets/970x250_Crocs_ClassicPillar_CLASSIC_CLOG_H2T_PriyankaChopra_Background_02.png',
-            headlineImage1: 'assets/970x250_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Headline_Make_It_A_Classic1.png',
-            headlineImage2: 'assets/970x250_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Headline_Make_It_A_Classic2.png',
-            headlineImage3: 'assets/970x250_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Headline_Make_It_A_Classic3.png',
+            backgroundImage1: 'assets/970x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Background_01.png',
+            backgroundImage2: 'assets/970x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Background_02.png',
+            headlineImage1: 'assets/970x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Headline_UNIQUELY_YOU_01.png',
+            headlineImage2: 'assets/970x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Headline_UNIQUELY_YOU_02.png',
+            headlineImage3: 'assets/970x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Headline_UNIQUELY_YOU_03.png',
+            logoImage: 'assets/Personalization_Logo_Animation_Sloth-Grey.gif',
             styleProperties: "na",
-            ctaSelect: 'en_text',
+            ctaSelect: 'en_text_grey',
             clickURL: 'https://www.adobe.com/#Crocs',
             impressionTracker: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABBJREFUeNpi+P//PwNAgAEACPwC/tuiTRYAAAAASUVORK5CYII='
           },
@@ -95,7 +102,6 @@
           staticData: {
             // ref: 'ref.png'
             ctaBtnColor: '#fff',
-            logoImage: 'images/970x250_Crocs_Logo.png',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -109,11 +115,10 @@
                 case 'en_text_green': content.ctaImage = 'images/cta/CTA_Green_EN_Shop_Now.png'; break;
                 case 'de_text_green': content.ctaImage = 'images/cta/CTA_Green_DE_Shop_Now.png'; break;
                 case 'kr_text_green': content.ctaImage = 'images/cta/CTA_Green_KO_Shop_Now.png'; break;
-                case 'en_text_grey': case 'en_text_gray': content.ctaImage = 'images/cta/CTA_Grey_EN_Shop_Now.png'; content.logoImage = 'images/970x250_Crocs_Logo_Grey.png'; break;
-                case 'jp_text_grey': case 'jp_text_gray': content.ctaImage = 'images/cta/CTA_Grey_JP_Shop_Now.png'; content.logoImage = 'images/970x250_Crocs_Logo_Grey.png'; break;
-                case 'de_text_grey': case 'de_text_gray': content.ctaImage = 'images/cta/CTA_Grey_DE_Shop_Now.png'; content.logoImage = 'images/970x250_Crocs_Logo_Grey.png'; break;
-                case 'kr_text_grey': case 'kr_text_gray': content.ctaImage = 'images/cta/CTA_Grey_KR_Shop_Now.png'; content.logoImage = 'images/970x250_Crocs_Logo_Grey.png'; break;
-                
+                case 'en_text_gray': case 'en_text_grey': content.ctaImage = 'images/cta/CTA_Grey_EN_Shop_Now.png'; break;
+                case 'jp_text_gray': case 'jp_text_grey': content.ctaImage = 'images/cta/CTA_Grey_JP_Shop_Now.png'; break;
+                case 'de_text_gray': case 'de_text_grey': content.ctaImage = 'images/cta/CTA_Grey_DE_Shop_Now.png'; break;
+                case 'kr_text_gray': case 'kr_text_grey': content.ctaImage = 'images/cta/CTA_Grey_KR_Shop_Now.png'; break;
                 default: content.ctaImage = 'images/cta/CTA_EN_Show_Now.png';
               }
             });
@@ -134,6 +139,14 @@
               }
             } catch(e) {  }
           }
+          var loadLogo = function(){
+            var image = new Image();
+            image.onload = function(){
+              ad.layers.logoImage.querySelector('img').src = this.src;
+            }
+            image.src = ad.layers.logoImage.querySelector('img').src;
+          }
+          gsap.delayedCall(0.5, loadLogo);
           var adWidth = 970;
           // gsap.set('#backgroundImage1', { x: -1});
           gsap.timeline({defaults:{ease: Power1.easeOut, duration: 0.3}})
