--- a/C/Crocs/Crocs_SS20/ClassicPillar_Sandals_Shop/ads/300x250/300x250.html
+++ b/C/Crocs/Crocs_SS20/ClassicPillar_Sandals_Shop/ads/300x250/300x250.html
@@ -36,7 +36,6 @@
       }
       /* #cta { background-color: !{ctaBtnColor}; } */
       /* #cta:hover { background-color: !{ctaBtnHover}; } */
-      /* #cta:hover { opacity: 0.8; } */
       #cta img { transition: all ease-out 0.2s; -webkit-transition: all ease-out 0.2s; }
       #cta img:hover { transform: translate(-50%,-50%) scale(1.1); }
       #cta svg { transition: all ease-out 0.2s; -webkit-transition: all ease-out 0.2s; }
@@ -47,7 +46,7 @@
     <div class="" id="ad">
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame" data-image="backgroundImage2"></div>
-      <div class="" style="width:180px;height:inherit;overflow:hidden;">
+      <div class="maskHeadlines" style="width:180px;height:inherit;overflow:hidden;">
         <div class="" style="position:absolute;top:0px;left:0px;width:300px;height: inherit;">
           <div id="headlineImage1" class="asset frame" data-image="headlineImage1"></div>
           <div id="headlineImage2" class="asset frame" data-image="headlineImage2"></div>
@@ -55,16 +54,11 @@
       </div>
       <div id="headlineImage3" class="asset frame" data-image="headlineImage3"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="logoImage" class="asset frame" data-image="logoImage"
-        style="top: 160px;
-          left: 42px;
-          width: 78px;
-          height: 25.5px;">
-      </div>
+      <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="cta" class="asset frame"
         data-image="ctaImage"
-        style="top: 162px;
-          left: 128px;
+        style="top: 156px;
+          left: 126px;
           width: 20px;
           height: 25px;">
       </div>
@@ -85,14 +79,13 @@
       setTimeout(function() {
         ad.contentSetup({
           cam: {
-            backgroundImage1: 'assets/300x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Background_01.png',
-            backgroundImage2: 'assets/300x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Background_02.png',
-            headlineImage1: 'assets/300x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Headline_UNIQUELY_YOU_01.png',
-            headlineImage2: 'assets/300x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Headline_UNIQUELY_YOU_02.png',
-            headlineImage3: 'assets/300x250_Crocs_DCO_PersonalizationPillar_KimSejeong_Headline_UNIQUELY_YOU_03.png',
-            logoImage: 'assets/Personalization_Logo_Animation_Sloth-Grey.gif',
-            styleProperties: "na",//"{'#cta': {y:10},'#logoImage': {y:10}}",
-            ctaSelect: 'icon_grey',
+            backgroundImage1: 'assets/300x250_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Background.png',
+            backgroundImage2: 'assets/1x1.png',
+            headlineImage1: 'assets/300x250_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Headline_Make_It_A_Classic1.png',
+            headlineImage2: 'assets/300x250_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Headline_Make_It_A_Classic2.png',
+            headlineImage3: 'assets/300x250_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Headline_Make_It_A_Classic3.png',
+            styleProperties: "{'#cta': {y:10},'#logoImage': {y:10}}",
+            ctaSelect: 'icon_white',
             clickURL: 'https://www.adobe.com/#Crocs',
             impressionTracker: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABBJREFUeNpi+P//PwNAgAEACPwC/tuiTRYAAAAASUVORK5CYII='
           },
@@ -104,14 +97,15 @@
           staticData: {
             // ref: 'ref.png'
             ctaBtnColor: '#fff',
+            logoImage: 'images/300x250_Crocs_Logo.png',
           },
           beforeLoad: function(data){
             data.map(function(content){
               // content.ctaBtn = content.ctaBtnColor.split('^')[0];
               // content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
-              var changePosition = function(){
+              var changePosition = function(flag){
                 gsap.set('#cta', {left:176, top:197, width: 102, height:34});
-                gsap.set('#logoImage', {left:175, top:153, width: 108, height:38});
+                if(!flag) content.logoImage = 'images/300x250_Crocs_Logo_NoShadow.png';
               }
               var addIcon = function(color){
                 color = color ? color : '#fff';
@@ -129,15 +123,21 @@
                 case 'en_text_green': content.ctaImage = 'images/cta/CTA_Green_EN_Shop_Now.png'; changePosition(); break;
                 case 'de_text_green': content.ctaImage = 'images/cta/CTA_Green_DE_Shop_Now.png'; changePosition(); break;
                 case 'kr_text_green': content.ctaImage = 'images/cta/CTA_Green_KO_Shop_Now.png'; changePosition(); break;
-                case 'en_text_gray': case 'en_text_grey': content.ctaImage = 'images/cta/CTA_Grey_EN_Shop_Now.png'; changePosition(); break;
-                case 'jp_text_gray': case 'jp_text_grey': content.ctaImage = 'images/cta/CTA_Grey_JP_Shop_Now.png'; changePosition(); break;
-                case 'de_text_gray': case 'de_text_grey': content.ctaImage = 'images/cta/CTA_Grey_DE_Shop_Now.png'; changePosition(); break;
-                case 'kr_text_gray': case 'kr_text_grey': content.ctaImage = 'images/cta/CTA_Grey_KR_Shop_Now.png'; changePosition(); break;
+                case 'en_text_grey': case 'en_text_gray': content.ctaImage = 'images/cta/CTA_Grey_EN_Shop_Now.png'; content.logoImage = 'images/300x250_Crocs_Logo_Grey_Text.png'; changePosition(true); break;
+                case 'jp_text_grey': case 'jp_text_gray': content.ctaImage = 'images/cta/CTA_Grey_JP_Shop_Now.png'; content.logoImage = 'images/300x250_Crocs_Logo_Grey_Text.png'; changePosition(true); break;
+                case 'de_text_grey': case 'de_text_gray': content.ctaImage = 'images/cta/CTA_Grey_DE_Shop_Now.png'; content.logoImage = 'images/300x250_Crocs_Logo_Grey_Text.png'; changePosition(true); break;
+                case 'kr_text_grey': case 'kr_text_gray': content.ctaImage = 'images/cta/CTA_Grey_KR_Shop_Now.png'; content.logoImage = 'images/300x250_Crocs_Logo_Grey_Text.png'; changePosition(true); break;
                 case 'icon_white': addIcon('#fff'); break;//content.ctaImage = 'images/cta/300x250_CTA_Icon.png'; break;
-                case 'icon_gray': case 'icon_grey': addIcon('#444');  break; //content.ctaImage = 'images/cta/300x250_CTA_Icon_Gray.png'; content.logoImage = 'images/300x250_Crocs_Logo_Gray.png'; break;
-                case 'icon_green': addIcon('#4f660b'); gsap.set('#cta', {left:236, top:184});  break; //content.logoImage = 'images/300x250_Crocs_Logo_Green.png';//content.ctaImage = 'images/cta/300x250_CTA_Icon_Green.png'; content.logoImage = 'images/300x250_Crocs_Logo_Green.png'; break;
+                case 'icon_gray': case 'icon_grey': addIcon('#444'); content.logoImage = 'images/300x250_Crocs_Logo_Gray.png'; break; //content.ctaImage = 'images/cta/300x250_CTA_Icon_Gray.png'; content.logoImage = 'images/300x250_Crocs_Logo_Gray.png'; break;
+                case 'icon_green': addIcon('#4f660b'); gsap.set('#cta', {left:236, top:184}); content.logoImage = 'images/300x250_Crocs_Logo_Green.png'; break; //content.ctaImage = 'images/cta/300x250_CTA_Icon_Green.png'; content.logoImage = 'images/300x250_Crocs_Logo_Green.png'; break;
                 default: addIcon('#fff'); //content.ctaImage = 'images/cta/300x250_CTA_Icon.png';
               }
+              /*
+              top: 156px;
+                  left: 126px;
+                  width: 20px;
+                  height: 25px;
+              */
             });
             return data;
           }
@@ -156,21 +156,13 @@
               }
             } catch(e) {  }
           }
-          var loadLogo = function(){
-            var image = new Image();
-            image.onload = function(){
-              ad.layers.logoImage.querySelector('img').src = this.src;
-            }
-            image.src = ad.layers.logoImage.querySelector('img').src;
-          }
-          gsap.delayedCall(0.5, loadLogo);
           var adWidth = 300;
           gsap.timeline({defaults:{ease: Power1.easeOut, duration: 0.3}})
           .from('#backgroundImage1', { scale: 1.14, duration: 8})
-          gsap.timeline({defaults:{ease: Power1.easeInOut, duration: 0.5}})
+          gsap.timeline({defaults:{ease: Power1.easeInOut, duration: 0.7}})
           .from('#headlineImage1', { x: -180,delay:0.5})
-          .from('#headlineImage2', { x: 180}, '-=0.5')
-          .from('#headlineImage3', { autoAlpha: 0, delay:0.2})
+          .from('#headlineImage2', { x: 180}, '-=0.7')
+          .from('#headlineImage3', { autoAlpha: 0, delay:0.5})
         });
       }, 2000);
     </script>
