--- a/C/Crocs/Crocs_SS20/ClassicPillar_Sandals_Shop/ads/320x50/320x50.html
+++ b/C/Crocs/Crocs_SS20/ClassicPillar_Sandals_Shop/ads/320x50/320x50.html
@@ -44,8 +44,7 @@
     <div class="" id="ad">
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame" data-image="backgroundImage2"></div>
-      <!-- <div id="backgroundImage" class="asset frame" data-image="backgroundImage"></div> -->
-      <div id="dividerLine" style="top: 0;left: 105px;width: 3px;height: inherit;background-color: #444;"></div>
+      <div id="backgroundImage" class="asset frame" data-image="backgroundImage"></div>
       <div class="maskHeadlines" style="width:180px;height:inherit;overflow:hidden;">
         <div class="" style="position:absolute;top:0px;left:0px;width:320px;height: inherit;">
           <div id="headlineImage1" class="asset frame" data-image="headlineImage1"></div>
@@ -54,13 +53,7 @@
       </div>
       <div id="headlineImage3" class="asset frame" data-image="headlineImage3"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="logoImage" class="asset frame"
-        data-image="logoImage"
-        style="top: 11px;
-          left: 206px;
-          width: 78px;
-          height: 25.5px;">
-      </div>
+      <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="cta" class="asset frame"
         data-image="ctaImage"
         style="top: 13px;
@@ -85,13 +78,12 @@
       setTimeout(function() {
         ad.contentSetup({
           cam: {
-            backgroundImage1: 'assets/320x50_Crocs_DCO_PersonalizationPillar_KimSejeong_Background_02.png',
-            backgroundImage2: 'assets/320x50_Crocs_DCO_PersonalizationPillar_KimSejeong_Background_01.png',
+            backgroundImage1: 'assets/320x50_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Background_Anim_01.png',
+            backgroundImage2: 'assets/320x50_SS20_Crocs_DCO_ClassicPillar-Clogs_PriyankaChopraJonas_Background_Anim_02.png',
             headlineImage1: 'assets/1x1.png',
             headlineImage2: 'assets/1x1.png',
             headlineImage3: 'assets/1x1.png',
-            logoImage: 'assets/Personalization_Logo_Animation_Sloth-White.gif',
-            styleProperties: "na",//{'#dividerLine':{backgroundColor:'#fff'}}
+            styleProperties: "na",
             ctaSelect: 'icon_white',
             clickURL: 'https://www.adobe.com/#Crocs',
             impressionTracker: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABBJREFUeNpi+P//PwNAgAEACPwC/tuiTRYAAAAASUVORK5CYII='
@@ -104,7 +96,8 @@
           staticData: {
             // ref: 'ref.png'
             ctaBtnColor: '#fff',
-            // backgroundImage: 'images/320x50_Crocs_ClassicPillar_Vertical_Line_Background_03.png',
+            logoImage: 'images/320x50_Crocs_Logo.png',
+            backgroundImage: 'images/320x50_Crocs_ClassicPillar_Vertical_Line_Background_03.png',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -120,8 +113,8 @@
               }
               switch(content.ctaSelect){
                 case 'icon_white': addIcon('#fff'); break;//content.ctaImage = 'images/cta/320x50_CTA_Icon.png'; break;
-                case 'icon_gray': case 'icon_grey': addIcon('#444'); break; //content.logoImage = 'images/CROCS_Logo_Animated.gif'; //content.ctaImage = 'images/cta/320x50_CTA_Icon_Gray.png'; content.logoImage = 'images/320x50_Crocs_Logo.png'; break;
-                case 'icon_green': addIcon('#4f660b'); break; // content.logoImage = 'images/320x50_Crocs_Logo_Green.png';//content.ctaImage = 'images/cta/320x50_CTA_Icon_Green.png'; content.logoImage = 'images/320x50_Crocs_Logo_Green.png'; break;
+                case 'icon_gray': case 'icon_grey': addIcon('#444'); content.logoImage = 'images/320x50_Crocs_Logo_Grey.png'; break; //content.ctaImage = 'images/cta/320x50_CTA_Icon_Gray.png'; content.logoImage = 'images/320x50_Crocs_Logo.png'; break;
+                case 'icon_green': addIcon('#4f660b'); content.logoImage = 'images/320x50_Crocs_Logo_Green.png'; content.backgroundImage = 'images/320x50_Crocs_ClassicPillar_Vertical_Line_Background_03_White.png'; break; //content.ctaImage = 'images/cta/320x50_CTA_Icon_Green.png'; content.logoImage = 'images/320x50_Crocs_Logo_Green.png'; break;
                 default: addIcon('#fff'); //content.ctaImage = 'images/cta/320x50_CTA_Icon.png';
               }
             });
@@ -142,14 +135,6 @@
               }
             } catch(e) {  }
           }
-          var loadLogo = function(){
-            var image = new Image();
-            image.onload = function(){
-              ad.layers.logoImage.querySelector('img').src = this.src;
-            }
-            image.src = ad.layers.logoImage.querySelector('img').src;
-          }
-          gsap.delayedCall(0.5, loadLogo);
           var adWidth = 320;
           if(ad.layers.overlay.style.color == 'transparent') {
             gsap.set('#backgroundImage2', { scale: 1.14 });
